Update wechat-mp app config

--- a/wechat-mp/app.json
+++ b/wechat-mp/app.json
@@ -4,9 +4,18 @@
     "pages/logs/logs"
   ],
   "window": {
+    "navigationBarBackgroundColor": "#fff",
     "navigationBarTextStyle": "black",
-    "navigationBarTitleText": "Weixin",
-    "navigationBarBackgroundColor": "#ffffff"
+    "navigationBarTitleText": "小管家"
+  },
+  "tabBar": {
+    "list": [{
+      "pagePath": "pages/index/index",
+      "text": "首页"
+    }, {
+      "pagePath": "pages/logs/logs",
+      "text": "日志"
+    }]
   },
   "style": "v2",
   "componentFramework": "glass-easel",
